--- a/biblioteka_app/templates/home.html
+++ b/biblioteka_app/templates/home.html
@@ -6,7 +6,7 @@
     <div class="cos-12" style="display: flex; justify-content: center; align-items: center;">
         <div class="card">
             <div class="card-header">
-            Cytat
+                Cytat
             </div>
             <div class="card-body text-center">
             <blockquote class="blockquote mb-0">
@@ -16,4 +16,10 @@
             </div>
         </div>
     </div>
+    <figure style="text-align: center;">
+        <img src="link_do_zdjęcia" alt="Opis zdjęcia">
+        <figcaption>
+            Cytat związany z obrazkiem.
+        </figcaption>
+    </figure>
 {% endblock  %}
