--- a/biblioteka_app/templates/peoples_list.html
+++ b/biblioteka_app/templates/peoples_list.html
@@ -16,7 +16,6 @@
             </div>
             <div class="col-2 text-center">
                 <br/>
-                {% comment %} <a class="btn btn-outline-success" href="{% url 'add-people' %}" role="button">Dodaj osobę</a> {% endcomment %}
                 <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#peopleAdd">
                     Dodaj Osobę
                 </button>
@@ -29,9 +28,9 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <form action="" method="POST">
+                                {% csrf_token %}
                                 <div class="modal-body">
-                                        {% csrf_token %}
-                                        {{ form.as_p }}                                        
+                                    {{ form.as_p }}                                        
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cofnij</button>
@@ -60,7 +59,7 @@
                                 </tr>
                             </thead>
                             <tbody class="table-group-divider">
-                                {% for people in peoples %}
+                                {% for people in list_peoples %}
                                     <tr>
                                         <th scope="row">{{ people.id }}</th>
                                         <td class="text-start">{{ people.first_name }}</td>
@@ -95,6 +94,27 @@
                                     </tr>
                                 {% endfor %}
                             </tbody>
+                            <caption>
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        {% if list_peoples.has_previous %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=1">&laquo</a>
+                                            </li>
+                                        {% endif %}
+                                        {% for i in nums %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                                            </li>
+                                        {% endfor %}
+                                        {% if list_peoples.has_next %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ list_peoples.paginator.num_pages}}">&raquo</a>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                </nav>
+                            </caption>
                         </table>
                     {% else %}
                         <p> Brak osób na liście. </p>
