--- a/biblioteka_app/templates/search_books_admin.html
+++ b/biblioteka_app/templates/search_books_admin.html
@@ -26,7 +26,7 @@
                                 <th scope="col" class="text-end" width="12%">Edytuj/Usuń</th>
                             </thead>
                             <tbody class="table-group-divider">
-                                {% for book in books %}
+                                {% for book in list_books %}
                                     <tr>
                                         <th scope="row">{{ book.id }}</th>
                                         <td class="text-start">{{ book.title }}</td>
@@ -51,6 +51,27 @@
                                     </tr>
                                 {% endfor %}
                             </tbody>
+                            <caption>
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        {% if list_books.has_previous %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=1">&laquo</a>
+                                            </li>
+                                        {% endif %}
+                                        {% for i in nums %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                                            </li>
+                                        {% endfor %}
+                                        {% if list_books.has_next %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ list_books.paginator.num_pages }}">&raquo</a>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                </nav>
+                            </caption>
                         </table>
                     {% else %}
                         <p> Nie znaleziono takiej książki: {{ searched }} </p>
