--- a/biblioteka_app/templates/search_categories_admin.html
+++ b/biblioteka_app/templates/search_categories_admin.html
@@ -22,7 +22,7 @@
                                 </tr>
                             </thead>
                             <tbody class="table-group-divider">
-                                {% for category in categories %}
+                                {% for category in list_categories %}
                                     <tr>
                                         <th scope="row">{{ category.id }}</th>
                                         <td class="text-start">{{ category.name }}</td>
@@ -33,6 +33,27 @@
                                     </tr>
                                 {% endfor %}
                             </tbody>
+                            <caption>
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        {% if list_categories.has_previous %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=1">&laquo</a>
+                                            </li>
+                                        {% endif %}
+                                        {% for i in nums %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                                            </li>
+                                        {% endfor %}
+                                        {% if list_categories.has_next %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{list_categories.paginator.num_pages }}">&raquo</a>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                </nav>
+                            </caption>
                         </table>
                     {% else %}
                         <p> Nie znaloziono kategorii: {{ searched }}
