--- a/biblioteka_app/templates/search_peoples_admin.html
+++ b/biblioteka_app/templates/search_peoples_admin.html
@@ -25,7 +25,7 @@
                                 </tr>
                             </thead>
                             <tbody class="table-group-divider">
-                                {% for people in peoples %}
+                                {% for people in list_peoples %}
                                     <tr>
                                         <th scope="row">{{ people.id }}</th>
                                         <td class="text-start">{{ people.first_name }}</td>
@@ -39,6 +39,27 @@
                                     </tr>
                                 {% endfor %}
                             </tbody>
+                            <caption>
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        {% if list_peoples.has_previous %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=1">&laquo</a>
+                                            </li>
+                                        {% endif %}
+                                        {% for i in nums %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                                            </li>
+                                        {% endfor %}
+                                        {% if list_peoples.has_next %}
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page={{ list_peoples.paginator.num_pages }}">&raquo</a>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                </nav>
+                            </caption>
                         </table>
                     {% else %}
                         Nie znaleziono takiej osoby: {{ searched }}
