Creating sessions with data displayed on the main page. However, there will be changes in this.

--- a/biblioteka_app/templates/book_list.html
+++ b/biblioteka_app/templates/book_list.html
@@ -45,6 +45,8 @@
                     <td class="text-center">
                         {% if book.borrower or book.borrow_date %}
                             Tak
+                        {% else %}
+                            -
                         {% endif %}
                     </td>
                     {% endif %}
