--- a/biblioteka_app/templates/home.html
+++ b/biblioteka_app/templates/home.html
@@ -1,25 +1,138 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-    <h1>
+<head>
+    <style>
+        figcaption.card {
+            position: absolute; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%);
+            background-color: rgba(255, 255, 255, 0.7);
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);"
+        }
+        figcaption.card .card-header span {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .card {
+            float: right;
+            width: 60%;
+            margin-bottom: 40px;
+        }
+        .card-header span {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .info {
+            float: left;
+            max-width: 37%;
+            margin: 10px;
+            padding: 10px;
+            border-right: 1px solid #ddd;
+        }
+        
+        .info .info-card {
+            border: 1px solid;
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+    </style>
+</head>
+<body>
+    <h1 class="text-center">
         Biblioteka
     </h1>
-    <div class="cos-12" style="display: flex; justify-content: center; align-items: center;">
-        <div class="card">
-            <div class="card-header">
-                Cytat
-            </div>
-            <div class="card-body text-center">
-            <blockquote class="blockquote mb-0">
-                <p>Lepiej zaliczać się do niektórych, niż do wszystkich.</p>
-                <footer class="blockquote-footer">Andrzej Sapkowski <cite title="Source Title">Krew Elfów</cite></footer>
-            </blockquote>
-            </div>
+    <figure style="text-align: center; position: relative;">
+        <img src="{{ image_path }}" alt="Opis zdjęcia" style="max-width: 100%; width: auto;">
+        {% if quote %}
+            <figcaption class="card">
+                <div class="card-header">
+                    <span>Cytat</span>
+                </div>
+                <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                        <p>{{ quote }}</p>
+                        <footer class="blockquote-footer">{{ author }} <cite title="Source Title">{{ source_quote }}</cite></footer>
+                    </blockquote>
+                </div>
+            </figcaption>
+        {% endif %}
+    </figure>
+    <div class="card">
+        <div class="card-header text-center">
+            <span>Nowo dodane książki</span>
+        </div>
+        <div class="card-body">
+            <table class="table tbale-striped">
+                <thead>
+                    <tr>
+                        <th scope="col" width="0.001%"></th>
+                        <th scope="col">Nazwa Książki</th>
+                        <th scope="col">Autor</th>
+                        <th scope="col" width="2%" class="text-center">Wypożyczona</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    {% for book in recently_added_books %}
+                        <tr>
+                            <th scope="row"></th>
+                            <td>{{ book.title }}</td>
+                            <td>{{ book.author }}</td>
+                            <td class="text-center">
+                                {% if book.borrower or book.borrow_date %}
+                                    Tak
+                                {% else %}
+                                    -
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-    <figure style="text-align: center;">
-        <img src="link_do_zdjęcia" alt="Opis zdjęcia">
-        <figcaption>
-            Cytat związany z obrazkiem.
-        </figcaption>
-    </figure>
+    <div class="info">
+        <p class="text-center">
+            O bibliotece
+            <hr>
+        </p>
+        <p>
+            {{ info_web }}
+        </p>
+        <p>
+            Biblioteka otwarta jest w godzinach:
+            {% for open in open_hours %}
+                <li>{{ open.day }}: {{ open.opening_time|time:"H:i" }}-{{ open.closing_time|time:"H:i" }}</li>
+            {% endfor %}
+            <li>Poniedziałek: 15-19</li>
+            <li>Wtorek: 14-16</li>
+            <li>Czwartek: 16-19</li>
+        </p>
+        <hr>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">
+                        Wszystkie
+                    </div>
+                    Ilość książek znajdujących się w bibliotece
+                </div>
+                <span class="badge bg-primary rounded-pill">{{ all_books_len }}</spam>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">
+                        Wypożyczone
+                    </div>
+                    Ilość książek wypożyczonych z bibliotece
+                </div>
+                <span class="badge bg-primary rounded-pill">{{ borrowed_books_count }}</spam>
+            </li>
+        </ol>
+    </div>
+</body>
 {% endblock  %}
